Fixed scrollbar rendering issue where it shouldn't have been in the contact form

--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ a:visited {
     text-align: center;
     width: 100%;
     background-color: #004e8c;
-    overflow-y: scroll;
 }
 
 #contactHeader {
